// Original file: protos/mint.proto

export enum BatchState {
  BATCH_STATE_UNKNOWN = 0,
  BATCH_STATE_PEDNING = 1,
  BATCH_STATE_FROZEN = 2,
  BATCH_STATE_COMMITTED = 3,
  BATCH_STATE_BROADCAST = 4,
  BATCH_STATE_CONFIRMED = 5,
  BATCH_STATE_FINALIZED = 6,
  BATCH_STATE_SEEDLING_CANCELLED = 7,
  BATCH_STATE_SPROUT_CANCELLED = 8,
}
